test/classes/initializers/inheritance/duplicate-super-init.chpl
class P { }
class C: P {
  proc init() {
    super.init();
    super.init();
  }
}

proc main() {
  var c = new C();
}
